--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
+    "api:server": "json-server --watch db.json",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject"
@@ -12,6 +13,7 @@
   "dependencies": {
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
+    "json-server": "^0.17.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
