--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
     "json-server": "^0.17.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-actions-sheet": "^0.5.8",
+    "react-native-safe-area-context": "^3.3.2",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.3"
   },
@@ -24,6 +28,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/styled-components": "^5.1.18",
     "typescript": "~4.3.5"
   },
   "private": true
