--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
-    "api:server": "json-server --watch db.json",
+    "api:server": "json-server --host 192.168.1.4 --watch db.json",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "axios": "^0.24.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "expo": "~43.0.2",
+    "expo-av": "^10.1.3",
     "expo-status-bar": "~1.1.0",
     "json-server": "^0.17.0",
     "react": "17.0.1",
