--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@types/styled-components-react-native": "^5.1.3",
     "axios": "^0.24.0",
     "eslint-import-resolver-typescript": "^2.5.0",
-    "expo": "~43.0.2",
+    "expo": "^44.0.0",
+    "expo-app-loading": "^1.3.0",
     "expo-av": "^10.1.3",
-    "expo-status-bar": "~1.1.0",
+    "expo-font": "^10.0.4",
+    "expo-status-bar": "^1.2.0",
     "json-server": "^0.17.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-actions-sheet": "^0.5.8",
+    "react-native-dotenv": "^3.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.3"
@@ -31,7 +36,7 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/styled-components": "^5.1.18",
-    "typescript": "~4.3.5"
+    "typescript": "^4.5.4"
   },
   "private": true
 }
